# Linux_Multimodal_App

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  audio_16k.pcm  conv_demo
include/: audio_handler.h  conv_code.h  conv_constants.h  conv_event.h  conversation.h  conversation_handler.h  conversation_utils.h
resources_aec_kws_vad_android/: ._conversation.json  ._ty_copylist.txt  conversation.json  ty_copylist.txt
resources_aec_kws_vad_android/ty_vad/: ._ty_vad.cfg  ty_vad.cfg
src/: audio_handler.cpp  conversation_handler.cpp  main.cpp
